add route list test result and get details of health record
