# server/src/models/HealthRecord.schema.js
@@ -6,6 +6,7 @@ const healthRecordSchema = new Schema(
     patient: { type: Schema.Types.ObjectId, ref: 'Patient', require: true },
     doctor: { type: Schema.Types.ObjectId, ref: 'User', require: true },
     department: { type: String, required: true },
+    testResult: [{ type: Schema.Types.ObjectId, 'ref': 'TestResult' }],
     info: { type: Schema.Types.Mixed },
     treatment: { type: Schema.Types.Mixed }
   },
